# rats

./: Cargo.toml  LICENSE  README.md
examples/: demo.rs  square.rs  triangle.rs
examples/input_file/: main.rs  serialize.rs  square.trianglelist
src/: bounds.rs  lib.rs  line.rs  main.rs  prelude.rs  renderer.rs  triangle.rs  vertex.rs
