[package]
name = "ratser"
description = "rasterize a triangle, silly"
repository = "https://github.com/alvinphilips/rats"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manife
[dev-dependencies]
